--- a/librz/include/meson.build
+++ b/librz/include/meson.build
@@ -66,6 +66,7 @@ rz_util_files = [
   'rz_util/rz_base64.h',
   'rz_util/rz_base91.h',
   'rz_util/rz_big.h',
+  'rz_util/rz_bits.h',
   'rz_util/rz_bitvector.h',
   'rz_util/rz_buf.h',
   'rz_util/rz_debruijn.h',
