--- a/librz/include/rz_userconf.h.in
+++ b/librz/include/rz_userconf.h.in
@@ -53,6 +53,7 @@
 #define HAVE___BUILTIN_BSWAP16      @HAVE___BUILTIN_BSWAP16@
 #define HAVE___BUILTIN_BSWAP32      @HAVE___BUILTIN_BSWAP32@
 #define HAVE___BUILTIN_BSWAP64      @HAVE___BUILTIN_BSWAP64@
+#define HAVE___BUILTIN_CLZLL        @HAVE___BUILTIN_CLZLL@
 #define HAVE_POSIX_MEMALIGN         @HAVE_POSIX_MEMALIGN@
 #define HAVE__ALIGNED_MALLOC        @HAVE__ALIGNED_MALLOC@
 
